--- a/index.html
+++ b/index.html
@@ -13,41 +13,41 @@
   <section class="bg">
     <div class="worm-box">
       <div style="width: 5%" class="worm-container">
-        <img class="worm" src="./worm.png" alt="worm meter">
+        <img class="worm" src="./img/worm.png" alt="worm meter">
       </div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-0"><img data-index="0" src="./king-mole-hungry.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-0"><img data-index="0" src="./img/king-mole-hungry.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-1"><img data-index="1" src="./king-mole-fed.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-1"><img data-index="1" src="./img/king-mole-fed.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-2"><img data-index="2" src="./king-mole-hungry.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-2"><img data-index="2" src="./img/king-mole-hungry.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-3"><img data-index="3" src="./king-mole-sad.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-3"><img data-index="3" src="./img/king-mole-sad.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-4"><img data-index="4" src="./king-mole-leaving.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-4"><img data-index="4" src="./img/king-mole-leaving.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-5"><img data-index="5" src="./mole-hungry.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-5"><img data-index="5" src="./img/mole-hungry.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-6"><img data-index="6" src="./mole-fed.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-6"><img data-index="6" src="./img/mole-fed.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-7"><img data-index="7" src="./mole-sad.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-7"><img data-index="7" src="./img/mole-sad.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-8"><img data-index="8" src="./mole-leaving.png" alt="mole" class="mole"></div>
+      <div class="hole" id="hole-8"><img data-index="8" src="./img/mole-leaving.png" alt="mole" class="mole"></div>
     </div>
     <div class="hole-container">
-      <div class="hole" id="hole-9"><img data-index="9" src="./king-mole-hungry.png" alt="happy mole" class="mole"></div>
+      <div class="hole" id="hole-9"><img data-index="9" src="./img/king-mole-hungry.png" alt="happy mole" class="mole"></div>
     </div>
   </section>
-  <img class="win" src="win.png" alt="mole">
+  <img class="win" src="./img/win.png" alt="mole">
   <script src="mole.js"></script>
 </body>
 
